# agents-json

./: .gitignore  LICENSE  MAINTAINERS.md  README.md  github_refresh.txt
python/: pyproject.toml  test_runner.py
python/agentsjson/: __init__.py  cli.py
python/agentsjson-core/: README.md  pyproject.toml
python/agentsjson-core/agentsjson/core/: executor.py  loader.py  parsetools.py  utils.py
python/agentsjson-core/agentsjson/core/models/: bundle.py
python/agentsjson-integrations/: README.md  pyproject.toml  requirements.txt
python/agentsjson-integrations/agentsjson/: __init__.py
python/agentsjson-integrations/agentsjson/integrations/: __init__.py
python/agentsjson-integrations/agentsjson/integrations/giphy/: __init__.py  tools.py
python/agentsjson-integrations/agentsjson/integrations/stripe/: map.py
python/agentsjson/core/: __init__.py  executor.py  parsetools.py  utils.py
python/agentsjson/core/models/: __init__.py  auth.py  exec_types.py  schema.py  tools.py
python/agentsjson/integrations/: __init__.py  types.py
python/agentsjson/integrations/alpacamarketdata/: map.py  tools.py
python/agentsjson/integrations/alpacatrading/: __init__.py  map.py  tools.py
python/agentsjson/integrations/facebook_marketing/: map.py  tools.py
python/agentsjson/integrations/giphy/: __init__.py  map.py
python/agentsjson/integrations/giphy/giphy_client/: __init__.py
python/agentsjson/integrations/giphy/tests/: test_giphy.py
python/agentsjson/integrations/googlecalendar/: __init__.py  map.py  tools.py
python/agentsjson/integrations/googledocs/: map.py  tools.py
python/agentsjson/integrations/googlesheets/: __init__.py  map.py  tools.py
python/agentsjson/integrations/hubspotcontacts/: __init__.py  map.py  tools.py
python/agentsjson/integrations/intercom/: map.py  tools.py
python/agentsjson/integrations/intercom/intercom_client/: __init__.py  api_client.py  configuration.py  (+1 more)
python/agentsjson/integrations/linkup/: map.py  tools.py
python/agentsjson/integrations/resend/: map.py  tools.py
python/agentsjson/integrations/rootly/: __init__.py  map.py  tools.py
python/agentsjson/integrations/slack/: map.py  tools.py
python/agentsjson/integrations/stripe/: __init__.py  map.py  tools.py
python/agentsjson/integrations/theodds/: map.py  tools.py
python/agentsjson/integrations/twitter/: __init__.py  map.py  tools.py
(+1915 files in other folders)
