[tool.poetry]
name = "agentsjson-core"
version = "0.1.0"
description = "Core functionality for Agents.json Python implementation"
authors = ["Wildcard AI <info@wildcard.ai>"]
readme = "README.md"
license = "BUSL-1.1"
packages = [
    {include = "agentsjson/core"}
]

[tool.poetry.dependencies]
python = "^3.8"
python-benedict = "^0.33.0"
pydantic = "^2.0.0"
typing-extensions = "^4.0.0"
pyyaml = "^6.0.0"
agentsjson-integrations = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
